[tool.poetry]
name = "proteomics"
version = "0.1.0"
description = ""
authors = ["Stefan <smig88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.4"
notebook = "^7.1.2"
scipy = "^1.13.0"
pandas = "^2.2.1"
numpy = "^1.26.4"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
